# baidu-translate-py

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-format.yml  codeql-analysis.yml  python-publish.yml
baidu_translate_py/: __init__.py  baidu_translate.py  dt.py  niu_translate.py  test_translate.py
