[tool.poetry]
name = "baidu-translate-py"
version = "0.1.0"
description = "百度翻译 API"
authors = ["dev <dev@qiyutech.tech>"]

[tool.poetry.dependencies]
python = "^3.9"

requests = ">=2.25,<3"
pydantic = ">=1.8,<2"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
